# TreeDetection

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  config.yml  environment.yml  helpers.py  installations.md  main.py  post_performant.py  prediction.py  requirements.txt  setup.py  tiling.py
TreeDetection/: __init__.py  config.py  detection.py  helpers.py  merging.py  postprocessing.py  prediction.py  preprocessing.py  pyproject.toml  recoveries.py  utilities.py
data/nDSM/: 324125317.tfw  324125317.tif
example/: config.yml  example.py
supplementary/: evaluation_compute_scores.py  evaluation_plot_automatic.py  inference_get_neigboring.py  postprocessing_hyperparams.py  pretraining_generate_voronoi.py  pretraining_preprocessing.py  segment_annotations.py  segment_evaluation_cambridge.py  sement_annotations_cambridge.py  train_foundation_model.py  training_test.py  training_validation.py
