[tool.poetry]
name = "TreeDetection"
version = "0.1.0"
description = "A framework for tree detection in aerial images."
authors = ["Jonas"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
torch = "2.4.0+cu124"  # PyTorch with CUDA 12.4 support
affine = "2.4.0"  # Specific version
aiofiles = "24.1.0"  # Specific version
cupy-cuda12x = "13.3.0"  # Cupy for CUDA 12.x
pytorch-cuda = "12.4"  # PyTorch CUDA support
fiona = "1.9.6"  # Specific version
geopandas = "1.0.1"  # Compatible version
matplotlib = ">=3.0.0"  # Flexible version
numba = "0.60.0"  # Compatible version
numpy = ">=1.20.0"  # Ensure NumPy compatibility
opencv-python = "4.10.0.84"  # Specific version
pandas = "2.2.3"  # Compatible version
pycocotools = "2.0.8"  # Specific version
pyyaml = "6.0.2"  # Compatible version
rasterio = "1.3a3"  # Version based on compatibility
Rtree = "1.3.0"  # Specific version
scikit-learn = "1.6.1"  # Compatible version
scipy = "1.15.2"  # Specific version
shapely = "2.0.7"  # Ensure compatibility
scikit-image = "0.0"  # Ensure compatible version
tqdm = "4.66.5"  # Specific version

[tool.poetry.dev-dependencies]
pytest = "*"  # Latest version for testing
